# BoardGameAI

./: .gitignore  CMakeLists.txt  README.md  aiControl.bat  genDataset.bat  selfReinforcementLoop.bat  selfReinforcementLoop2.bat  selfReinforcementLoop3.bat  testAI.bat  trainNN.bat
apps/: CMakeLists.txt  main.cpp
apps/Console/: CMakeLists.txt  main.cpp
apps/Play7WDuel/: 7WDuelRenderer.cpp  7WDuelRenderer.h  CMakeLists.txt  RendererInterface.h  Slider.h  main.cpp
src/: CMakeLists.txt
src/7WDuel/: 7WConstants.h  CMakeLists.txt  Card.cpp  Card.h  GameContext.cpp  GameContext.h  GameController.cpp  GameController.h  GameEngine.cpp  GameEngine.h  GameStateSerialization.cpp
src/AI/: AI.cpp  AI.h  CMakeLists.txt  MCTS.cpp  MCTS.h  ML.cpp  ML.h  MinMaxAI.cpp  MinMaxAI.h  NetworkDef.h  Tournament.cpp  Tournament.h  precompiled_header.h
src/Core/: Algorithms.h  CMakeLists.txt  Common.cpp  Common.h  LinearAllocator.h  StringUtil.cpp  StringUtil.h  flat_hash_map.h  hash.h  linalg.h  thread_pool.h  type.h
